# MASA-RL

./: README.md  data_preprocess.py  eval.sh  pyproject.toml  train_grpo.sh  train_masagrpo.sh
data/deepscaler/: train_example.json
eval/: calc_passk.py  eval.py  inference.py  utils.py
eval/human_eval/: evaluation.py
masa_train/: main_ppo.py  masa_ray_trainer.py  masa_rl_dataset.py
masa_train/config/: masa_grpo.yaml
verl/: protocol.py
verl/trainer/: constants_ppo.py  fsdp_sft_trainer.py  main_eval.py  main_generation.py  main_ppo.py  meta_sft_dataset.py
verl/trainer/ppo/: core_algos.py  metric_utils.py  ray_trainer.py  reward.py
verl/utils/: distributed.py  tokenizer.py  torch_functional.py
verl/utils/dataset/: rl_dataset.py
verl/utils/debug/: trajectory_tracker.py
verl/utils/reward_score/: __init__.py  grader.py  math.py  meta_cog.py  utils.py
verl/workers/: fsdp_workers.py
verl/workers/reward_manager/: __init__.py  masa_naive.py  naive.py
