[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch==2.7.0",
    "accelerate==1.10.1",
    "codetiming",
    "datasets",
    "dill",
    "hydra-core",
    "liger-kernel",
    "numpy==2.2.0",
    "pandas",
    "peft",
    "pyarrow==21.0.0",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict==0.9.1",
    "torchdata",
    "transformers==4.53.2",
    "wandb",
    "packaging>=20.0",
    "uvicorn",
    "fastapi",
    "math_verify",
    "vllm==0.9.1",
    "flash-attn",
    "pysnooper==1.2.3",
    "antlr4-python3-runtime==4.9.3",
    "latex2sympy2_extended[antlr4_9_3]",
]
[tool.setuptools]
packages = ["verl"]
